--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -156,21 +156,25 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\bone.cpp" />
+    <ClCompile Include="source\CharacterBase.cpp" />
     <ClCompile Include="source\ModeGameOver.cpp" />
     <ClCompile Include="source\ModeClear.cpp" />
     <ClCompile Include="source\Camera.cpp" />
     <ClCompile Include="source\ApplicationMain.cpp" />
     <ClCompile Include="source\ModeGame.cpp" />
     <ClCompile Include="source\ModeTitle.cpp" />
+    <ClCompile Include="source\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\bone.h" />
+    <ClInclude Include="source\CharacterBase.h" />
     <ClInclude Include="source\ModeGameOver.h" />
     <ClInclude Include="source\ModeClear.h" />
     <ClInclude Include="source\Camera.h" />
     <ClInclude Include="source\ApplicationMain.h" />
     <ClInclude Include="source\ModeGame.h" />
     <ClInclude Include="source\ModeTitle.h" />
+    <ClInclude Include="source\Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
