--- a/AppFrame/AppFrame.vcxproj.filters
+++ b/AppFrame/AppFrame.vcxproj.filters
@@ -61,6 +61,7 @@
     <ClCompile Include="source\System\Source\Resource\ResourceServer.cpp" />
     <ClCompile Include="source\Application\Global.cpp" />
     <ClCompile Include="source\System\Source\Function\mymath.cpp" />
+    <ClCompile Include="source\System\Source\Function\DrawGauge.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Application\ApplicationBase.h">
@@ -105,5 +106,6 @@
     <ClInclude Include="source\System\Header\Resource\ResourceServer.h" />
     <ClInclude Include="source\Application\Global.h" />
     <ClInclude Include="source\System\Header\Function\mymath.h" />
+    <ClInclude Include="source\System\Header\Function\DrawGauge.h" />
   </ItemGroup>
 </Project>
