仕様プレゼン用プログラム作成 敵を吹っ飛ばす仮処理を追加

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -157,6 +157,7 @@
   <ItemGroup>
     <ClCompile Include="source\bone.cpp" />
     <ClCompile Include="source\CharacterBase.cpp" />
+    <ClCompile Include="source\enemy.cpp" />
     <ClCompile Include="source\ModeGameOver.cpp" />
     <ClCompile Include="source\ModeClear.cpp" />
     <ClCompile Include="source\Camera.cpp" />
@@ -169,6 +170,7 @@
   <ItemGroup>
     <ClInclude Include="source\bone.h" />
     <ClInclude Include="source\CharacterBase.h" />
+    <ClInclude Include="source\enemy.h" />
     <ClInclude Include="source\ModeGameOver.h" />
     <ClInclude Include="source\ModeClear.h" />
     <ClInclude Include="source\Camera.h" />
