機能テスト: オブジェクト破壊時に3Dモデルをパーツごとに分解して飛び散らす

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="source\ModeTitle.cpp" />
     <ClCompile Include="source\Player.cpp" />
     <ClCompile Include="source\Chain.cpp" />
+    <ClCompile Include="source\Test_BreakObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\bone.h" />
@@ -177,6 +178,7 @@
     <ClInclude Include="source\ModeTitle.h" />
     <ClInclude Include="source\Player.h" />
     <ClInclude Include="source\Chain.h" />
+    <ClInclude Include="source\Test_BreakObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
