--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -167,7 +167,7 @@
     <ClCompile Include="source\Player.cpp" />
     <ClCompile Include="source\Chain.cpp" />
     <ClCompile Include="source\SlaBlock.cpp" />
-    <ClCompile Include="UIBase.cpp" />
+    <ClCompile Include="source\UIBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\bone.h" />
@@ -182,7 +182,7 @@
     <ClInclude Include="source\Player.h" />
     <ClInclude Include="source\Chain.h" />
     <ClInclude Include="source\SlaBlock.h" />
-    <ClInclude Include="UIBase.h" />
+    <ClInclude Include="source\UIBase.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
