ポーズ画面の追加
音量設定、コントローラーの振動の設定、ゲームを終了する機能の追加
音量設定は、仮で作った変数なので音関連のクラスの変数に移行する
コントローラーの振動の設定は、メインプログラマーさんのコードを見て改良予定
操作説明画面は未作成

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\ModePause.cpp" />
     <ClCompile Include="source\bone.cpp" />
     <ClCompile Include="source\CharacterBase.cpp" />
     <ClCompile Include="source\ModeGameOver.cpp" />
@@ -167,6 +168,7 @@
     <ClCompile Include="source\Chain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\ModePause.h" />
     <ClInclude Include="source\bone.h" />
     <ClInclude Include="source\CharacterBase.h" />
     <ClInclude Include="source\ModeGameOver.h" />
