Timerクラスの位置を変更 Boneクラスにboneの位置と速度を初期化する関数を追加
内容
timerクラスをappframeに移動
イベントなどで髪の毛の動きを止めるための関数を追加
ただし、モデルの髪の毛が地面に垂直方向でないと重力の影響で少しの間だけ動きます。

--- a/AppFrame/AppFrame.vcxproj
+++ b/AppFrame/AppFrame.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="source\Mode\ModeBase.cpp" />
     <ClCompile Include="source\Mode\ModeServer.cpp" />
     <ClCompile Include="source\System\Source\Collision\2DCollision.cpp" />
+    <ClCompile Include="source\System\Source\Function\Timer.cpp" />
     <ClCompile Include="source\System\Source\Resource\ResourceServer.cpp" />
     <ClCompile Include="source\System\Source\Sound\FadeSound.cpp" />
     <ClCompile Include="source\System\Source\Function\Fps.cpp" />
@@ -192,6 +193,7 @@
     <ClInclude Include="source\Mode\ModeServer.h" />
     <ClInclude Include="source\System\Header\Collision\2DCollision.h" />
     <ClInclude Include="source\System\Header\Collision\MyStructure.h" />
+    <ClInclude Include="source\System\Header\Function\Timer.h" />
     <ClInclude Include="source\System\Header\Resource\ResourceServer.h" />
     <ClInclude Include="source\System\Header\Sound\FadeSound.h" />
     <ClInclude Include="source\System\Header\Function\Fps.h" />
