--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.efkefc filter=lfs diff=lfs merge=lfs -text
 *.bmp filter=lfs diff=lfs merge=lfs -text
+*.vcxproj.filters merge=union
