--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\myJson.cpp" />
     <ClCompile Include="source\bone.cpp" />
     <ClCompile Include="source\BreakObject.cpp" />
     <ClCompile Include="source\BuildingBase.cpp" />
@@ -173,6 +174,7 @@
     <ClCompile Include="source\SlaBlock.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\myJson.h" />
     <ClInclude Include="source\bone.h" />
     <ClInclude Include="source\BreakObject.h" />
     <ClInclude Include="source\BuildingBase.h" />
