OBBを構造体からクラスに変更。

--- a/AppFrame/AppFrame.vcxproj
+++ b/AppFrame/AppFrame.vcxproj
@@ -159,6 +159,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\System\Source\Collision\MyStructure.cpp" />
     <ClCompile Include="source\System\Source\Function\DrawGauge.cpp" />
     <ClCompile Include="source\System\Source\Function\mymath.cpp" />
     <ClCompile Include="source\Application\Global.cpp" />
