--- a/AppFrame/AppFrame.vcxproj.filters
+++ b/AppFrame/AppFrame.vcxproj.filters
@@ -64,6 +64,7 @@
     <ClCompile Include="source\System\Source\Function\Timer.cpp" />
     <ClCompile Include="source\System\Source\Function\DrawGauge.cpp" />
     <ClCompile Include="source\System\Source\Collision\MyStructure.cpp" />
+    <ClCompile Include="source\System\Source\Function\Vibration.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Application\ApplicationBase.h">
@@ -111,5 +112,6 @@
     <ClInclude Include="source\System\Header\Function\Timer.h" />
     <ClInclude Include="source\System\Header\Function\Vector3D.h" />
     <ClInclude Include="source\System\Header\Function\DrawGauge.h" />
+    <ClInclude Include="source\System\Header\Function\Vibration.h" />
   </ItemGroup>
 </Project>
