EnemyPoolを作成するための関数や変数の追加
内容
EnemyPoolを作成するためにCreateやInitなどのコンストラクタで行っていた処理を細分化し関数に直しました。
EnemyPoolで読み込んだ敵ごとのステータスを参照するためにEnemyStractを作成し、EnemyParam構造体を作りました。

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="source\UIHeart.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\EnemyStract.h" />
     <ClInclude Include="source\House.h" />
     <ClInclude Include="source\myJson.h" />
     <ClInclude Include="source\bone.h" />
