--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\SlaBlockPattern2.cpp" />
     <ClCompile Include="source\CrystarlPattern2.cpp" />
     <ClCompile Include="source\EnemyPool.cpp" />
     <ClCompile Include="source\House.cpp" />
@@ -180,6 +181,7 @@
     <ClCompile Include="source\UIHeart.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\SlaBlockPattern2.h" />
     <ClInclude Include="source\CrystarlPattern2.h" />
     <ClInclude Include="source\EnemyPool.h" />
     <ClInclude Include="source\EnemyStract.h" />
