--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClCompile Include="source\House.cpp" />
     <ClCompile Include="source\EnemyPool.cpp" />
     <ClCompile Include="source\CrystarlPattern2.cpp" />
+    <ClCompile Include="source\SlaBlockPattern2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -50,5 +51,6 @@
     <ClInclude Include="source\EnemyStract.h" />
     <ClInclude Include="source\EnemyPool.h" />
     <ClInclude Include="source\CrystarlPattern2.h" />
+    <ClInclude Include="source\SlaBlockPattern2.h" />
   </ItemGroup>
 </Project>
