--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -156,6 +156,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\BoardPolygon.cpp" />
+    <ClCompile Include="source\ModePause.cpp" />
     <ClCompile Include="source\PlaneEffectManeger.cpp" />
     <ClCompile Include="source\SlaBlockPattern2.cpp" />
     <ClCompile Include="source\CrystarlPattern2.cpp" />
@@ -185,6 +186,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\BoardPolygon.h" />
+    <ClInclude Include="source\ModePause.h" />
     <ClInclude Include="source\PlaneEffectManeger.h" />
     <ClInclude Include="source\SlaBlockPattern2.h" />
     <ClInclude Include="source\CrystarlPattern2.h" />
