--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="source\Chain.cpp" />
     <ClCompile Include="source\ScreenVibration.cpp" />
     <ClCompile Include="source\SlaBlock.cpp" />
+    <ClCompile Include="source\Tower.cpp" />
     <ClCompile Include="source\UIBase.cpp" />
     <ClCompile Include="source\UIExpPoint.cpp" />
     <ClCompile Include="source\UIHeart.cpp" />
@@ -213,6 +214,7 @@
     <ClInclude Include="source\Chain.h" />
     <ClInclude Include="source\ScreenVibration.h" />
     <ClInclude Include="source\SlaBlock.h" />
+    <ClInclude Include="source\Tower.h" />
     <ClInclude Include="source\UIBase.h" />
     <ClInclude Include="source\UIExpPoint.h" />
     <ClInclude Include="source\UIHeart.h" />
