--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -30,6 +30,8 @@
     <ClCompile Include="source\BoardPolygon.cpp" />
     <ClCompile Include="source\ModePause.cpp" />
     <ClCompile Include="source\ModeInstructions.cpp" />
+    <ClCompile Include="source\AnimationItem.cpp" />
+    <ClCompile Include="source\AnimationManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -62,5 +64,7 @@
     <ClInclude Include="source\BoardPolygon.h" />
     <ClInclude Include="source\ModePause.h" />
     <ClInclude Include="source\ModeInstructions.h" />
+    <ClInclude Include="source\AnimationItem.h" />
+    <ClInclude Include="source\AnimationManager.h" />
   </ItemGroup>
 </Project>
