FrameDataクラスを追加
内容
プレイヤーやエネミーなどのモーションフレームの処理を行うクラスを追加

--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="source\AnimationItem.cpp" />
     <ClCompile Include="source\AnimationManager.cpp" />
     <ClCompile Include="source\BoardPolygon.cpp" />
+    <ClCompile Include="source\FrameData.cpp" />
     <ClCompile Include="source\ModeInstructions.cpp" />
     <ClCompile Include="source\ModePause.cpp" />
     <ClCompile Include="source\PlaneEffectManeger.cpp" />
@@ -192,6 +193,7 @@
     <ClInclude Include="source\AnimationItem.h" />
     <ClInclude Include="source\AnimationManager.h" />
     <ClInclude Include="source\BoardPolygon.h" />
+    <ClInclude Include="source\FrameData.h" />
     <ClInclude Include="source\ModeInstructions.h" />
     <ClInclude Include="source\ModePause.h" />
     <ClInclude Include="source\PlaneEffectManeger.h" />
