--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -33,6 +33,7 @@
     <ClCompile Include="source\AnimationItem.cpp" />
     <ClCompile Include="source\AnimationManager.cpp" />
     <ClCompile Include="source\Tower.cpp" />
+    <ClCompile Include="source\FrameData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -68,5 +69,6 @@
     <ClInclude Include="source\AnimationItem.h" />
     <ClInclude Include="source\AnimationManager.h" />
     <ClInclude Include="source\Tower.h" />
+    <ClInclude Include="source\FrameData.h" />
   </ItemGroup>
 </Project>
