--- a/AppFrame/AppFrame.vcxproj
+++ b/AppFrame/AppFrame.vcxproj
@@ -179,6 +179,8 @@
     <ClCompile Include="source\System\Source\Input\XInput.cpp" />
     <ClCompile Include="source\System\Source\Function\mydraw.cpp" />
     <ClCompile Include="source\System\Source\Function\Easing.cpp" />
+    <ClCompile Include="source\System\Source\Sound\SoundItem.cpp" />
+    <ClCompile Include="source\System\Source\Sound\SoundServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\System\Header\Function\DrawGauge.h" />
@@ -203,6 +205,8 @@
     <ClInclude Include="source\System\Header\Input\XInput.h" />
     <ClInclude Include="source\System\Header\Function\mydraw.h" />
     <ClInclude Include="source\System\Header\Function\Easing.h" />
+    <ClInclude Include="source\System\Header\Sound\SoundItem.h" />
+    <ClInclude Include="source\System\Header\Sound\SoundServer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
