--- a/AppFrame/AppFrame.vcxproj.filters
+++ b/AppFrame/AppFrame.vcxproj.filters
@@ -59,6 +59,8 @@
     <ClCompile Include="source\System\Source\Function\DrawGauge.cpp" />
     <ClCompile Include="source\System\Source\Collision\MyStructure.cpp" />
     <ClCompile Include="source\System\Source\Function\Vibration.cpp" />
+    <ClCompile Include="source\System\Source\Sound\SoundItem.cpp" />
+    <ClCompile Include="source\System\Source\Sound\SoundServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Application\ApplicationBase.h">
@@ -101,5 +103,7 @@
     <ClInclude Include="source\System\Header\Function\Vector3D.h" />
     <ClInclude Include="source\System\Header\Function\DrawGauge.h" />
     <ClInclude Include="source\System\Header\Function\Vibration.h" />
+    <ClInclude Include="source\System\Header\Sound\SoundItem.h" />
+    <ClInclude Include="source\System\Header\Sound\SoundServer.h" />
   </ItemGroup>
 </Project>
