--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="source\BoardPolygon.cpp" />
     <ClCompile Include="source\FrameData.cpp" />
     <ClCompile Include="source\ModeInstructions.cpp" />
+    <ClCompile Include="source\ModelColor.cpp" />
     <ClCompile Include="source\ModePause.cpp" />
     <ClCompile Include="source\PlaneEffectManeger.cpp" />
     <ClCompile Include="source\SlaBlockPattern2.cpp" />
@@ -195,6 +196,7 @@
     <ClInclude Include="source\BoardPolygon.h" />
     <ClInclude Include="source\FrameData.h" />
     <ClInclude Include="source\ModeInstructions.h" />
+    <ClInclude Include="source\ModelColor.h" />
     <ClInclude Include="source\ModePause.h" />
     <ClInclude Include="source\PlaneEffectManeger.h" />
     <ClInclude Include="source\SlaBlockPattern2.h" />
