--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClCompile Include="source\AnimationManager.cpp" />
     <ClCompile Include="source\Tower.cpp" />
     <ClCompile Include="source\FrameData.cpp" />
+    <ClCompile Include="source\ModelColor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -70,5 +71,6 @@
     <ClInclude Include="source\AnimationManager.h" />
     <ClInclude Include="source\Tower.h" />
     <ClInclude Include="source\FrameData.h" />
+    <ClInclude Include="source\ModelColor.h" />
   </ItemGroup>
 </Project>
