--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\ModeScenario.cpp" />
     <ClCompile Include="source\AnimationItem.cpp" />
     <ClCompile Include="source\AnimationManager.cpp" />
     <ClCompile Include="source\BoardPolygon.cpp" />
@@ -191,6 +192,7 @@
     <ClCompile Include="source\UIHeart.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\ModeScenario.h" />
     <ClInclude Include="source\AnimationItem.h" />
     <ClInclude Include="source\AnimationManager.h" />
     <ClInclude Include="source\BoardPolygon.h" />
