--- a/Game/Game/Game.vcxproj
+++ b/Game/Game/Game.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="source\AnimationManager.cpp" />
     <ClCompile Include="source\BoardPolygon.cpp" />
     <ClCompile Include="source\FrameData.cpp" />
+    <ClCompile Include="source\MotionList.cpp" />
     <ClCompile Include="source\ModeInstructions.cpp" />
     <ClCompile Include="source\ModelColor.cpp" />
     <ClCompile Include="source\ModePause.cpp" />
@@ -196,6 +197,7 @@
     <ClInclude Include="source\AnimationManager.h" />
     <ClInclude Include="source\BoardPolygon.h" />
     <ClInclude Include="source\FrameData.h" />
+    <ClInclude Include="source\MotionList.h" />
     <ClInclude Include="source\ModeInstructions.h" />
     <ClInclude Include="source\ModelColor.h" />
     <ClInclude Include="source\ModePause.h" />
