--- a/Game/Game/Game.vcxproj.filters
+++ b/Game/Game/Game.vcxproj.filters
@@ -36,6 +36,7 @@
     <ClCompile Include="source\FrameData.cpp" />
     <ClCompile Include="source\ModelColor.cpp" />
     <ClCompile Include="source\TowerParts.cpp" />
+    <ClCompile Include="source\MotionList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\myJson.h" />
@@ -74,5 +75,6 @@
     <ClInclude Include="source\FrameData.h" />
     <ClInclude Include="source\ModelColor.h" />
     <ClInclude Include="source\TowerParts.h" />
+    <ClInclude Include="source\MotionList.h" />
   </ItemGroup>
 </Project>
